--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "react-antd-column-resize",
-  "version": "1.0.3",
+  "name": "@towavephone/react-antd-column-resize",
+  "version": "1.0.4",
   "homepage": "https://varown.github.io/react-antd-column-resize/components/use-antd-column-resize",
   "repository": {
     "type": "git",
@@ -22,7 +22,7 @@
     "lint:css": "stylelint \"{src,test}/**/*.{css,less}\"",
     "lint:es": "eslint \"{src,test}/**/*.{js,jsx,ts,tsx}\"",
     "prepare": "husky install && dumi setup",
-    "prepublishOnly": "father doctor && npm run build",
+    "prepublishOnly": "npm run build",
     "start": "npm run dev"
   },
   "commitlint": {
